[project]
name = "pon-shift-warsaw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "coverage>=7.10.6",
    "django>=5.2.5",
    "django-celery-beat>=2.8.1",
    "django-celery-results>=2.6.0",
    "djangorestframework>=3.16.1",
    "dotenv>=0.9.9",
    "fakeredis>=2.31.1",
    "geopy>=2.4.1",
    "psycopg2>=2.9.10",
    "redis>=6.4.0",
    "requests>=2.32.5",
]
